--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,17 @@ jobs:
       
       - name: Build and Publish  
         run: dotnet publish -c Release -o release /p:GenerateRuntimeConfigurationFiles=true --runtime linux-x64 --self-contained false
+      
+      - name: Deploy Lambda
+        uses: appleboy/lambda-action@master
+        with:
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: ${{ secrets.AWS_REGION }}
+          function_name: blazure-api
+          zip_file: Release/Blazure.Api.zip
+          memory_size: 128
+          timeout: 1
+          handler: Blazure.Api::Blazure.Api.LambdaEntryPoint::FunctionHandlerAsync
+          role: ${{ secrets.AWS_LAMBDA_ROLE }}
+          runtime: dotnetcore3.1
